# simple-agent-langchain-openai

./: Building-a-Simple-Agent-using-LangChain-and-OpenAI.ipynb  Building-a-Support-Agent-using-LangGraph-and-OpenAI.ipynb  README.md  pyproject.toml  vehicles.csv
